# polar-semeval-2026

./: .gitignore  LICENSE  TODO.md  main.py  pyproject.toml  task_2.ipynb
report/: main.typ
src/polar_semeval/: __init__.py  semeval_config.py  semeval_dataset.py  semeval_trainer.py
starter/: starter.ipynb
